Grammars/Tortoise/TortoiseParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Tortoise.g4 by ANTLR 4.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5")]
[System.CLSCompliant(false)]
public partial class TortoiseParser : Parser {
	public const int
		MOV=1, ROT=2, HIT=3, HEAL=4, DIR=5, VAL=6, INT=7, NEWLINE=8, WS=9;
	public const int
		RULE_prog = 0, RULE_cmd = 1, RULE_move = 2, RULE_rotate = 3, RULE_hit = 4, 
		RULE_heal = 5;
	public static readonly string[] ruleNames = {
		"prog", "cmd", "move", "rotate", "hit", "heal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'mov'", "'rot'", "'hit'", "'heal'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "MOV", "ROT", "HIT", "HEAL", "DIR", "VAL", "INT", "NEWLINE", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Tortoise.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


	    public TortoiseCompiler Compiler = new TortoiseCompiler();

	public TortoiseParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgContext : ParserRuleContext {
		public CmdContext[] cmd() {
			return GetRuleContexts<CmdContext>();
		}
		public CmdContext cmd(int i) {
			return GetRuleContext<CmdContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 13;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 12; cmd();
				}
				}
				State = 15;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MOV) | (1L << ROT) | (1L << HIT) | (1L << HEAL))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CmdContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(TortoiseParser.NEWLINE, 0); }
		public MoveContext move() {
			return GetRuleContext<MoveContext>(0);
		}
		public RotateContext rotate() {
			return GetRuleContext<RotateContext>(0);
		}
		public HitContext hit() {
			return GetRuleContext<HitContext>(0);
		}
		public HealContext heal() {
			return GetRuleContext<HealContext>(0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cmd; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.EnterCmd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.ExitCmd(this);
		}
	}

	[RuleVersion(0)]
	public CmdContext cmd() {
		CmdContext _localctx = new CmdContext(Context, State);
		EnterRule(_localctx, 2, RULE_cmd);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 21;
			switch (TokenStream.La(1)) {
			case MOV:
				{
				State = 17; move();
				}
				break;
			case ROT:
				{
				State = 18; rotate();
				}
				break;
			case HIT:
				{
				State = 19; hit();
				}
				break;
			case HEAL:
				{
				State = 20; heal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 23; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MoveContext : ParserRuleContext {
		public IToken _DIR;
		public IToken _VAL;
		public ITerminalNode MOV() { return GetToken(TortoiseParser.MOV, 0); }
		public ITerminalNode DIR() { return GetToken(TortoiseParser.DIR, 0); }
		public ITerminalNode VAL() { return GetToken(TortoiseParser.VAL, 0); }
		public MoveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_move; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.EnterMove(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.ExitMove(this);
		}
	}

	[RuleVersion(0)]
	public MoveContext move() {
		MoveContext _localctx = new MoveContext(Context, State);
		EnterRule(_localctx, 4, RULE_move);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 25; Match(MOV);
			State = 26; _localctx._DIR = Match(DIR);
			State = 27; _localctx._VAL = Match(VAL);
			 Compiler.AddMoveCommand((_localctx._DIR!=null?_localctx._DIR.Text:null), (_localctx._VAL!=null?_localctx._VAL.Text:null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RotateContext : ParserRuleContext {
		public IToken _VAL;
		public ITerminalNode ROT() { return GetToken(TortoiseParser.ROT, 0); }
		public ITerminalNode VAL() { return GetToken(TortoiseParser.VAL, 0); }
		public RotateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rotate; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.EnterRotate(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.ExitRotate(this);
		}
	}

	[RuleVersion(0)]
	public RotateContext rotate() {
		RotateContext _localctx = new RotateContext(Context, State);
		EnterRule(_localctx, 6, RULE_rotate);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30; Match(ROT);
			State = 31; _localctx._VAL = Match(VAL);
			 Compiler.AddRotateCommand((_localctx._VAL!=null?_localctx._VAL.Text:null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HitContext : ParserRuleContext {
		public ITerminalNode HIT() { return GetToken(TortoiseParser.HIT, 0); }
		public HitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hit; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.EnterHit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.ExitHit(this);
		}
	}

	[RuleVersion(0)]
	public HitContext hit() {
		HitContext _localctx = new HitContext(Context, State);
		EnterRule(_localctx, 8, RULE_hit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34; Match(HIT);
			 Compiler.AddHitCommand(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HealContext : ParserRuleContext {
		public ITerminalNode HEAL() { return GetToken(TortoiseParser.HEAL, 0); }
		public HealContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heal; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.EnterHeal(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITortoiseListener typedListener = listener as ITortoiseListener;
			if (typedListener != null) typedListener.ExitHeal(this);
		}
	}

	[RuleVersion(0)]
	public HealContext heal() {
		HealContext _localctx = new HealContext(Context, State);
		EnterRule(_localctx, 10, RULE_heal);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37; Match(HEAL);
			 Compiler.AddHealCommand(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
